--- a/documents/urban_simulation_report.bib
+++ b/documents/urban_simulation_report.bib
@@ -289,6 +289,20 @@
   file = {C:\Users\Soki\Zotero\storage\RES7GNWF\Waddell - 2002 - UrbanSim Modeling Urban Development for Land Use,.pdf}
 }
 
+@book{wasserman1994,
+  title = {Social {{Network Analysis}}: {{Methods}} and {{Applications}}},
+  shorttitle = {Social {{Network Analysis}}},
+  author = {Wasserman, Stanley and Faust, Katherine},
+  year = {1994},
+  month = nov,
+  publisher = {Cambridge University Press},
+  abstract = {Social network analysis is used widely in the social and behavioral sciences, as well as in economics, marketing, and industrial engineering. The social network perspective focuses on relationships among social entities and is an important addition to standard social and behavioral research, which is primarily concerned with attributes of the social units. Social Network Analysis: Methods and Applications reviews and discusses methods for the analysis of social networks with a focus on applications of these methods to many substantive examples. It is a reference book that can be used by those who want a comprehensive review of network methods, or by researchers who have gathered network data and want to find the most appropriate method by which to analyze it. It is also intended for use as a textbook as it is the first book to provide comprehensive coverage of the methodology and applications of the field.},
+  googlebooks = {CAm2DpIqRUIC},
+  isbn = {978-0-521-38707-1},
+  langid = {english},
+  keywords = {Social Science / General,Social Science / Research,Social Science / Sociology / General}
+}
+
 @article{wyatt2002,
   title = {Subway {{Service}} to {{Resume On Routes Closed After}} 9/11},
   author = {Wyatt, Edward},
